--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,12 @@ project(dstruct VERSION 0.0.1 DESCRIPTION "Another C++ engine...")
 
 include(GNUInstallDirs)
 
-
+# Check for Math library (Linux)
 find_library(m OPTIONAL)
-
 
 set(CMAKE_SOURCE_DIR src)
 
 set(dstruct_SRC ${CMAKE_SOURCE_DIR}/bst.c ${CMAKE_SOURCE_DIR}/llist.c)
 
 add_library(dstruct SHARED ${dstruct_SRC})
-target_include_directories(dstruct PRIVATE include)
+target_include_directories(dstruct PRIVATE include/dstruct)
