--- a/meson.build
+++ b/meson.build
@@ -11,11 +11,12 @@ cc.get_id()
 inc_dir = include_directories('include/dstruct/')
 dstruct_sources = ['dstruct/src/bst.c',
                    'dstruct/src/llist.c',
-                   'dstruct/src/dllist.c']
+                   'dstruct/src/dllist.c',
+                   'dstruct/src/stack.c']
 
 libdstruct = shared_library('dstruct',
                             dstruct_sources,
-                            version: '0.0.1',soversion:'0',
+                            version: '0.0.1',
                             include_directories: inc_dir,
                             install: true)
 
