--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ set(dstruct_SRC
     ${CMAKE_SOURCE_DIR}/bst.c
     ${CMAKE_SOURCE_DIR}/llist.c 
     ${CMAKE_SOURCE_DIR}/dllist.c
-    ${CMAKE_SOURCE_DIR}/stack.c)
+    ${CMAKE_SOURCE_DIR}/stack.c
+    ${CMAKE_SOURCE_DIR}/dyarray.c)
 
 add_library(dstruct SHARED ${dstruct_SRC})
 target_include_directories(dstruct PRIVATE include/dstruct)
