--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,24 @@
+# Build Directories
 /lib/
 /build/
 /builddir/
+/objs/
 
-*.exe
+
+
+# C Object Files
+*.so
+*.dylib
 *.dll
+
+# C Executables
+*.exe
+*.out
 *.stackdump
+
+# Demo executable file
+demo
+
+# KDevelop tmp files
+*swp
+*.kdev4
