--- a/meson.build
+++ b/meson.build
@@ -8,7 +8,7 @@ project('dstruct','c',
 )
 cc=meson.get_compiler('c')
 cc.get_id()
-inc_dir = include_directories('include/dstruct/')
+inc_dir = include_directories('dstruct/include/dstruct/')
 dstruct_sources = ['dstruct/src/bst.c',
                    'dstruct/src/llist.c',
                    'dstruct/src/dllist.c',
