added Dyarray documentation, fixed build files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_GENERATOR "Unix Makefiles")
 
 add_subdirectory(dstruct)
 add_executable(demo)
-target_include_directories(demo PRIVATE dstruct/include/dstruct)
+target_include_directories(demo PRIVATE dstruct/include/)
 target_sources(demo PRIVATE demo.c)
 target_link_libraries(demo dstruct)
 
