Fixed automake, moved normal makefile to makefile_manual

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,6 @@
 lib_LTLIBRARIES=libdstruct.la
-libdstruct_la_SOURCES=dstruct/src/llist.c
+libdstruct_la_SOURCES=dstruct/src/llist.c\
+                      dstruct/src/bst.c\
+                      dstruct/src/dllist.c\
+                      dstruct/src/dyarray.c\
+                      dstruct/src/stack.c
