removed issue with sending int* to functions, moved headers to their own directory

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 lib_LTLIBRARIES=libdstruct.la
+libdstruct_la_CFLAGS="-I dstruct/include"
 libdstruct_la_SOURCES=dstruct/src/llist.c\
                       dstruct/src/bst.c\
                       dstruct/src/dllist.c\
