removed alternative build systems, CMake is the standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(demo)
 set(CMAKE_GENERATOR "Unix Makefiles")
 
 add_subdirectory(dstruct)
+
+enable_testing()
 add_executable(demo)
 target_include_directories(demo PRIVATE dstruct/include)
 target_sources(demo PRIVATE demo.c)
 target_link_libraries(demo dstruct)
 
-
+add_test(Test demo)
