Modified llist structure, more fixes coming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_GENERATOR "Unix Makefiles")
 add_subdirectory(dstruct)
 
 enable_testing()
-add_executable(demo)
-target_include_directories(demo PRIVATE dstruct/include)
-target_sources(demo PRIVATE demo.c)
-target_link_libraries(demo dstruct)
+add_executable(tester)
+target_include_directories(tester PRIVATE dstruct/include)
+target_sources(tester PRIVATE tester.c)
+target_link_libraries(tester dstruct)
 
-add_test(Test demo)
+add_test(Test tester)
