Changed testing path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_GENERATOR "Unix Makefiles")
 add_subdirectory(dstruct)
 enable_testing()
 add_subdirectory(tests)
-add_test(AllTestsInTests tests)
+add_test(linked_list_test tests/llist_test)
