fixed bugs in llist, added more tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.16.0)
-project(demo)
+project(dstruct_tests)
 
 set(CMAKE_GENERATOR "Unix Makefiles")
 
+include(GoogleTest)
+
 add_subdirectory(dstruct)
-enable_testing()
+
 add_subdirectory(tests)
-add_test(linked_list_test tests/llist_test)
