Added PKGBUILD script

--- a/dstruct/CMakeLists.txt
+++ b/dstruct/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 3.16.0)
+cmake_minimum_required(VERSION 3.21.0)
 project(dstruct VERSION 0.0.1 DESCRIPTION "A C data structure library")
+
+include(GNUInstallDirs)
 
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
@@ -13,5 +15,12 @@ add_library(dstruct SHARED src/bst.c
                            src/stack.c
                            src/dyarray.c)
 
+set_target_properties(dstruct PROPERTIES PUBLIC_HEADER include/dstruct.h)
+
+install(TARGETS dstruct
+
+        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include/dstruct
+        PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include/dstruct
+        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/dstruct)
 
 
